--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
     <body>
 
+        <h1>Top 100 Crypto Currencies by market cap</h1>
+
         <script type="text/javascript">
             var w = 700;
             var h = 500;
