--- a/coinMarketPie.html
+++ b/coinMarketPie.html
@@ -10,5 +10,61 @@
     </head>
     <body>
         <h1>Wassap fukker</h1>
+
+        <script type="text/javascript">
+            var w = 1000;
+            var h = 800;
+
+            var innerRadius = 0;
+            var outerRadius = w / 2;
+
+            $(document).ready(function(){
+                console.log("ready bitch");
+
+                var dataset = [];
+                var val = [];
+
+                $.get("https://api.coinmarketcap.com/v1/ticker/", function(data){
+
+                    dataset = [];
+                    for(var i = 0; i < 100; i++){
+                        dataset.push(data[i])
+                    }
+                    console.log(dataset);
+
+                })
+                .done(function(){
+                    dataset.forEach(function(ele){
+                        val.push(parseInt(ele.market_cap_usd));
+                    });
+
+                    console.log("this be dataset: ", dataset, " and this is val: ", val);
+
+                    var arc = d3.svg.arc()
+                                .innerRadius(innerRadius)
+                                .outerRadius(outerRadius)
+
+                    var pie = d3.layout.pie();
+
+                    var color = d3.scale.category10();
+
+                    var svg = d3.select("body")
+                                .append("svg")
+                                .attr("width", w)
+                                .attr("height", h);
+
+                    var arcs = svg.selectAll("g.arc")
+                                .data(pie(dataset))
+                                .enter()
+                                .append("g")
+                                .attr("class", "arc")
+                                .attr("transform", "translate(" + outerRaius + "," + outerRadius  + ")");
+
+                    arcs.append("path")
+
+
+                })
+            })
+        </script>
     </body>
 </html>
