date formatting! for timeline scatteplot

--- a/coinMarketPie.html
+++ b/coinMarketPie.html
@@ -81,8 +81,8 @@
                                 return dataset[i].name + ": $" + numberWithCommas(val[i]);
                             }
                         })
-
-
+                        .attr("fill", "white");
+                        
                 })
             })
         </script>
