--- a/template.html
+++ b/template.html
@@ -26,8 +26,22 @@
             if(xhr.readyState == 4 && xhr.status == 200){
                 let response = JSON.parse(xhr.responseText);
                 console.log(response);
+                makeChart();
             }
         }
+
+        function makeChart(){
+
+            var w = 800;
+            var h = 500;
+            
+            var svg = d3.select("body")
+                        .append("svg")
+                        .attr("width", w)
+                        .attr("height", h);
+        }
+
+        makeRequest();
 
         </script>
 
