--- a/top10marketcaps.html
+++ b/top10marketcaps.html
@@ -12,79 +12,70 @@
         <h1>Loading D3.js Template</h1>
 
         <script type="text/javascript">
+            var xhr = new XMLHttpRequest();
 
-        var xhr = new XMLHttpRequest();
+            function makeRequest(){
+                xhr.open("GET", "https://api.coinmarketcap.com/v1/ticker/", true);
+                xhr.send();
+                xhr.onreadystatechange = processRequest;
+            }
 
-        function makeRequest(){
-            xhr.open("GET", "https://api.coinmarketcap.com/v1/ticker/", true);
-            xhr.send();
-            xhr.onreadystatechange = processRequest;
-        }
-
-        function processRequest(){
-            console.log("testing, state: ", xhr.readyState)
-            if(xhr.readyState == 4 && xhr.status == 200){
-                dataset = [];
-                for(var i = 0; i < 10; i++){
-                    addingId = JSON.parse(xhr.responseText)[i];
-                    addingId.id = i;
-                    dataset.push(addingId);
+            function processRequest(){
+                console.log("testing, state: ", xhr.readyState)
+                if(xhr.readyState == 4 && xhr.status == 200){
+                    dataset = [];
+                    for(var i = 0; i < 10; i++){
+                        addingId = JSON.parse(xhr.responseText)[i];
+                        addingId.id = i;
+                        dataset.push(addingId);
+                    }
+                    console.log("this is dataset: ", dataset);
+                    makeChart();
                 }
-                console.log("this is dataset: ", dataset);
-                makeChart();
-            }
-        }
-
-        function makeChart(){
-            var w = 800;
-            var h = 500;
-
-            var id = function(d){
-                return d.id
             }
 
-            var val = [];
-                    dataset.forEach(function(ele){
-                        val.push(parseInt(ele.market_cap_usd));
+            function makeChart(){
+                var w = 800;
+                var h = 500;
+
+                var val = [];
+                dataset.forEach(function(ele){
+                    val.push(parseInt(ele.market_cap_usd));
+                })
+                var max = d3.max(val)
+
+
+                var xScale = d3.scale.ordinal()
+                                .domain(d3.range(dataset.length))
+                                .rangeRoundBands([0, w], 0.05)
+
+                var yScale = d3.scale.linear()
+                                .domain([0, d3.max(val)])
+                                .range([0, h]);
+
+                var svg = d3.select("body")
+                            .append("svg")
+                            .attr("width", w)
+                            .attr("height", h);
+
+                svg.selectAll("rect")
+                    .data(dataset)
+                    .enter()
+                    .append("rect")
+                    .attr("x", function(d, i){
+                        return xScale(i);
                     })
-            var max = d3.max(val)
+                    .attr("y", function(d){
+                        return h - yScale(d.market_cap_usd);
+                    })
+                    .attr("width", xScale.rangeBand())
+                    .attr("height", function(d, i){
+                        return yScale(d.market_cap_usd)
+                    })
+            }
 
-
-            var xScale = d3.scale.ordinal()
-                            .domain(d3.range(dataset.length))
-                            .rangeRoundBands([0, w], 0.05)
-
-            var yScale = d3.scale.linear()
-                            .domain([0, d3.max(val)])
-                            .range([0, h]);
-
-
-
-            var svg = d3.select("body")
-                        .append("svg")
-                        .attr("width", w)
-                        .attr("height", h);
-
-            svg.selectAll("rect")
-                .data(dataset, id)
-                .enter()
-                .append("rect")
-                .attr("x", function(d, i){
-                    return xScale(i);
-                })
-                .attr("y", function(d){
-                    return h - yScale(d.market_cap_usd);
-                })
-                .attr("width", xScale.rangeBand())
-                .attr("height", function(d, i){
-                    return yScale(d.market_cap_usd)
-                })
-
-        }
-
-        makeRequest();
+            makeRequest();
 
         </script>
-
     </body>
 </html>
