working bar chart, no frills

--- a/top10marketcaps.html
+++ b/top10marketcaps.html
@@ -37,6 +37,8 @@
             function makeChart(){
                 var w = 800;
                 var h = 500;
+                var padding = 120;
+                var yPadding = 40;
 
                 var val = [];
                 dataset.forEach(function(ele){
@@ -47,11 +49,19 @@
 
                 var xScale = d3.scale.ordinal()
                                 .domain(d3.range(dataset.length))
-                                .rangeRoundBands([0, w], 0.05)
+                                .rangeRoundBands([padding, w - padding], 0.05)
 
                 var yScale = d3.scale.linear()
                                 .domain([0, d3.max(val)])
-                                .range([0, h]);
+                                .range([h - yPadding, 0]);
+
+                var yAxis = d3.svg.axis()
+                                .scale(yScale)
+                                .orient("left")
+
+                var xAxis = d3.svg.axis()
+                                .scale(xScale)
+                                .orient("bottom")
 
                 var svg = d3.select("body")
                             .append("svg")
@@ -66,12 +76,23 @@
                         return xScale(i);
                     })
                     .attr("y", function(d){
-                        return h - yScale(d.market_cap_usd);
+                        return yScale(d.market_cap_usd) - yPadding;
                     })
                     .attr("width", xScale.rangeBand())
                     .attr("height", function(d, i){
-                        return yScale(d.market_cap_usd)
+                        return h - yScale(d.market_cap_usd)
                     })
+
+                svg.append("g")
+                    .attr("class", "y axis")
+                    .attr("transform", "translate(" + padding + ", 0)")
+                    .call(yAxis);
+
+                svg.append("g")
+                    .attr("class", "x axis")
+                    .attr("transform", "translate(0, " + (h - yPadding) + ")")
+                    .call(xAxis);
+
             }
 
             makeRequest();
