--- a/top10marketcaps.html
+++ b/top10marketcaps.html
@@ -35,10 +35,10 @@
             }
 
             function makeChart(){
-                var w = 800;
-                var h = 500;
+                var w = 1000;
+                var h = 600;
                 var padding = 120;
-                var yPadding = 40;
+                var yPadding = 80;
 
                 var val = [];
                 dataset.forEach(function(ele){
@@ -98,8 +98,12 @@
                 svg.append("g")
                     .attr("class", "x axis")
                     .attr("transform", "translate(0, " + (h - yPadding) + ")")
-                    .call(xAxis);
-
+                    .call(xAxis)
+                    .selectAll("text")
+                    .attr("y", 15)
+                    .attr("font-size", 12)
+                    .attr("x", xScale.rangeBand() / 2)
+                    .attr("transform", "rotate(45)")
             }
 
             makeRequest();
