--- a/marketCapBubble.html
+++ b/marketCapBubble.html
@@ -61,16 +61,28 @@
             var nodes = bubble.nodes(processData(response))
                             .filter(function(d){ return !d.children; });
 
-            var vis = svg.selectAll("circle")
+            var vis = svg.selectAll("g")
                             .data(nodes)
+                            .enter()
+                            .append("g")
+                            .attr("class", "node")
+                            .attr("transform", function(d){  return "translate(" + d.x +  "," + d.y + ")"; })
                             // .append("g")
                             // .attr("class", "node")
 
-            vis.enter().append("circle")
-                        // .append("g")
-                        .attr("class", "node")
-                        .attr("transform", function(d){  return "translate(" + d.x +  "," + d.y + ")"; })
-                        .attr("r", function(d){ console.log("DRRR", d.r); return d.r; })
+            vis.append("circle")
+                .attr("r", function(d){ console.log("DRRR", d.r); return d.r; })
+
+            vis.append("text")
+                .text("hey")
+                .attr("fill", "white")
+
+
+
+            // vis.enter().append("circle")
+            //             // .append("g")
+            //             .attr("class", "node")
+
                         // .attr("class", function(d){ return d.className; })
         }
 
