--- a/template.html
+++ b/template.html
@@ -25,14 +25,15 @@
             console.log("testing, state: ", xhr.readyState)
             if(xhr.readyState == 4 && xhr.status == 200){
                 let response = JSON.parse(xhr.responseText);
-                console.log(response);
-                makeChart();
+                makeChart(response);
             }
         }
 
         function makeChart(){
             var w = 800;
             var h = 500;
+
+            console.log(response);
 
             var svg = d3.select("body")
                         .append("svg")
